docs-archive/apache-airflow-providers-postgres/6.8.0/_sources/_api/airflow/providers/postgres/hooks/postgres/index.rst.txt
airflow.providers.postgres.hooks.postgres
=========================================

.. py:module:: airflow.providers.postgres.hooks.postgres


Attributes
----------

.. autoapisummary::

   airflow.providers.postgres.hooks.postgres.USE_PSYCOPG3
   airflow.providers.postgres.hooks.postgres.sqlalchemy_version
   airflow.providers.postgres.hooks.postgres.CursorType


Classes
-------

.. autoapisummary::

   airflow.providers.postgres.hooks.postgres.CompatConnection
   airflow.providers.postgres.hooks.postgres.PostgresHook


Module Contents
---------------

.. py:data:: USE_PSYCOPG3
   :type:  bool

.. py:data:: sqlalchemy_version

.. py:type:: CursorType
   :canonical: DictCursor | RealDictCursor | NamedTupleCursor


.. py:class:: CompatConnection

   Bases: :py:obj:`Protocol`


   Protocol for type hinting psycopg2 and psycopg3 connection objects.


   .. py:method:: cursor(*args, **kwargs)


   .. py:method:: commit()


   .. py:method:: close()


   .. py:method:: __enter__()


   .. py:method:: __exit__(exc_type, exc_val, exc_tb)


   .. py:property:: notices
      :type: list[Any]



   .. py:property:: adapters
      :type: Any



   .. py:property:: row_factory
      :type: Any



   .. py:method:: add_notice_handler(handler)


.. py:class:: PostgresHook(*args, options = None, enable_log_db_messages = False, **kwargs)

   Bases: :py:obj:`airflow.providers.common.sql.hooks.sql.DbApiHook`


   Interact with Postgres.

   You can specify ssl parameters in the extra field of your connection
   as ``{"sslmode": "require", "sslcert": "/path/to/cert.pem", etc}``.
   Also, you can choose cursor as ``{"cursor": "dictcursor"}``. Refer to the
   psycopg2.extras or psycopg.rows for more details.

   Note: For Redshift, use keepalives_idle in the extra connection parameters
   and set it to less than 300 seconds.

   Note: For AWS IAM authentication, use iam in the extra connection parameters
   and set it to true. Leave the password field empty. This will use the
   "aws_default" connection to get the temporary token unless you override
   in extras.
   extras example: ``{"iam":true, "aws_conn_id":"my_aws_conn"}``

   For Redshift, also use redshift in the extra connection parameters and
   set it to true. The cluster-identifier is extracted from the beginning of
   the host field, so is optional. It can however be overridden in the extra field.
   extras example: ``{"iam":true, "redshift":true, "cluster-identifier": "my_cluster_id"}``

   For Redshift Serverless, use redshift-serverless in the extra connection parameters and
   set it to true. The workgroup-name is extracted from the beginning of
   the host field, so is optional. It can however be overridden in the extra field.
   extras example: ``{"iam":true, "redshift-serverless":true, "workgroup-name": "my_serverless_workgroup"}``

   :param postgres_conn_id: The :ref:`postgres conn id <howto/connection:postgres>`
       reference to a specific postgres database.
   :param options: Optional. Specifies command-line options to send to the server
       at connection start. For example, setting this to ``-c search_path=myschema``
       sets the session's value of the ``search_path`` to ``myschema``.
   :param enable_log_db_messages: Optional. If enabled logs database messages sent to the client
       during the session. To avoid a memory leak psycopg2 only saves the last 50 messages.
       For details, see: `PostgreSQL logging configuration parameters
       <https://www.postgresql.org/docs/current/runtime-config-logging.html>`__


   .. py:attribute:: conn_name_attr
      :value: 'postgres_conn_id'



   .. py:attribute:: default_conn_name
      :value: 'postgres_default'



   .. py:attribute:: default_client_log_level
      :value: 'warning'



   .. py:attribute:: default_connector_version
      :type:  int
      :value: 2



   .. py:attribute:: conn_type
      :value: 'postgres'



   .. py:attribute:: hook_name
      :value: 'Postgres'



   .. py:attribute:: supports_autocommit
      :value: True



   .. py:attribute:: supports_executemany
      :value: True



   .. py:attribute:: ignored_extra_options


   .. py:attribute:: default_azure_oauth_scope
      :value: 'https://ossrdbms-aad.database.windows.net/.default'



   .. py:attribute:: conn
      :type:  CompatConnection | None
      :value: None



   .. py:attribute:: database
      :type:  str | None


   .. py:attribute:: options
      :value: None



   .. py:attribute:: enable_log_db_messages
      :value: False



   .. py:property:: sqlalchemy_url
      :type: sqlalchemy.engine.URL


      Return a Sqlalchemy.engine.URL object from the connection.

      Needs to be implemented in the provider subclass to return the sqlalchemy.engine.URL object.

      :return: the extracted sqlalchemy.engine.URL object.



   .. py:property:: dialect_name
      :type: str



   .. py:property:: dialect
      :type: airflow.providers.common.sql.dialects.dialect.Dialect



   .. py:method:: get_conn()

      Establish a connection to a postgres database.



   .. py:method:: get_df(sql: str | list[str], parameters: list | tuple | collections.abc.Mapping[str, Any] | None = None, *, df_type: Literal['pandas'] = 'pandas', **kwargs: Any) -> pandas.DataFrame
                  get_df(sql: str | list[str], parameters: list | tuple | collections.abc.Mapping[str, Any] | None = None, *, df_type: Literal['polars'] = ..., **kwargs: Any) -> polars.DataFrame

      Execute the sql and returns a dataframe.

      :param sql: the sql statement to be executed (str) or a list of sql statements to execute
      :param parameters: The parameters to render the SQL query with.
      :param df_type: Type of dataframe to return, either "pandas" or "polars"
      :param kwargs: (optional) passed into `pandas.io.sql.read_sql` or `polars.read_database` method
      :return: A pandas or polars DataFrame containing the query results.



   .. py:method:: copy_expert(sql, filename)

      Execute SQL using psycopg's ``copy_expert`` method.

      Necessary to execute COPY command without access to a superuser.

      Note: if this method is called with a "COPY FROM" statement and
      the specified input file does not exist, it creates an empty
      file and no data is loaded, but the operation succeeds.
      So if users want to be aware when the input file does not exist,
      they have to check its existence by themselves.



   .. py:method:: get_uri()

      Extract the URI from the connection.

      :return: the extracted URI in Sqlalchemy URI format.



   .. py:method:: bulk_load(table, tmp_file)

      Load a tab-delimited file into a database table.



   .. py:method:: bulk_dump(table, tmp_file)

      Dump a database table into a tab-delimited file.



   .. py:method:: get_iam_token(conn)

      Get the IAM token from different identity providers.



   .. py:method:: get_aws_iam_token(conn)

      Get the AWS IAM token.

      This uses AWSHook to retrieve a temporary password to connect to
      Postgres or Redshift. Port is required. If none is provided, the default
      5432 is used.



   .. py:method:: get_azure_iam_token(conn)

      Get the Azure IAM token.

      This uses AzureBaseHook to retrieve an OAUTH token to connect to Postgres.
      Scope for the OAuth token can be set in the config option ``azure_oauth_scope`` under the section ``[postgres]``.



   .. py:method:: get_table_primary_key(table, schema = 'public')

      Get the table's primary key.

      :param table: Name of the target table
      :param schema: Name of the target schema, public by default
      :return: Primary key columns list



   .. py:method:: get_openlineage_database_info(connection)

      Return Postgres/Redshift specific information for OpenLineage.



   .. py:method:: get_openlineage_database_dialect(connection)

      Return postgres/redshift dialect.



   .. py:method:: get_openlineage_default_schema()

      Return current schema. This is usually changed with ``SEARCH_PATH`` parameter.



   .. py:method:: get_ui_field_behaviour()
      :classmethod:



   .. py:method:: get_db_log_messages(conn)

      Log database messages.



   .. py:method:: insert_rows(table, rows, target_fields=None, commit_every=1000, replace=False, *, executemany=False, fast_executemany=False, autocommit=False, **kwargs)

      Insert a collection of tuples into a table.

      When ``fast_executemany=True`` with psycopg2, uses ``execute_values`` which batches
      all rows into a single INSERT statement for better performance.
      For psycopg3, the default ``executemany`` already uses pipelining for high performance.

      Rows are inserted in chunks, each chunk (of size ``commit_every``) is
      done in a new transaction.

      :param table: Name of the target table
      :param rows: The rows to insert into the table
      :param target_fields: The names of the columns to fill in the table
      :param commit_every: The maximum number of rows to insert in one
          transaction. Set to 0 to insert all rows in one transaction.
      :param replace: Whether to replace instead of insert (uses ON CONFLICT)
      :param executemany: If True, all rows are inserted at once in
          chunks defined by the commit_every parameter. This only works if all rows
          have same number of column names, but leads to better performance.
      :param fast_executemany: If True, rows will be inserted using an optimized
          bulk execution strategy (``psycopg2.extras.execute_values``), unless psycopg3
          is being used. This can significantly improve performance for large inserts.
          If set to False or psycopg3 is being used, the method falls back to the default
          implementation from ``DbApiHook.insert_rows``.
      :param autocommit: What to set the connection's autocommit setting to
          before executing the query.



   .. py:method:: upsert_rows(table, rows, target_fields, conflict_fields, update_fields = None, commit_every = 1000, *, fast_executemany = False, autocommit = False)

      Upsert rows into a PostgreSQL table using ``ON CONFLICT``.

      :param table: Name of the target table.
      :param rows: Rows to upsert.
      :param target_fields: Non-empty column names used in the ``INSERT`` statement.
      :param conflict_fields: Non-empty column names used in the ``ON CONFLICT`` clause.
      :param update_fields: Columns updated on conflict. If omitted, all
          non-conflict columns are updated. If an empty list is provided,
          conflicting rows are ignored via ``DO NOTHING``.
      :param commit_every: Maximum number of rows per transaction. Default value is 1000.
      :param fast_executemany: Use ``psycopg2.extras.execute_batch`` for improved
          batch performance.
      :param autocommit: Connection autocommit setting.



